# rust

./: .gitignore  LICENSE
projects/vm_16_bit/: Cargo.toml
projects/vm_16_bit/src/: vm.rs
projects/warehouse/: Cargo.toml
projects/warehouse/src/: inventory.rs  lib.rs  main.rs
tutorial/: Cargo.toml  typescript
tutorial/closures/: Cargo.toml
tutorial/closures/src/: custom.rs  main.rs
tutorial/common/src/: lib.rs
tutorial/ctrl-flow/src/: main.rs
tutorial/data-types/src/: main.rs
tutorial/enums/src/: main.rs  project.rs
tutorial/error-handling/: story.txt
tutorial/error-handling/src/: main.rs  project.rs
tutorial/functions/src/: main.rs
tutorial/generics/src/: main.rs  project.rs
tutorial/hash-maps/src/: main.rs  project.rs
tutorial/iterators/: Cargo.toml
tutorial/iterators/src/: adapters.rs  consuming_adapters.rs  main.rs  manual.rs  problem_1.rs  traits.rs
tutorial/lifetimes/: Cargo.toml
tutorial/lifetimes/src/: main.rs  project.rs
tutorial/options-and-results-enums/: Cargo.toml
tutorial/options-and-results-enums/src/: from_scratch.rs  main.rs  project.rs
tutorial/ownership/src/: main.rs  project.rs
tutorial/scripts/: add_module.bat  add_module.sh
tutorial/slices/src/: main.rs  project.rs
tutorial/strings/src/: main.rs
tutorial/structs/src/: main.rs  project.rs
tutorial/traits/: Cargo.toml
tutorial/traits/src/: associated_types.rs  common_traits.rs  finance.rs  lib.rs  lodging.rs  main.rs  ops.rs  std_traits_impl.rs  utils.rs
tutorial/variables/src/: main.rs
tutorial/vectors/src/: main.rs  project.rs
(+1 files in other folders)
