[workspace]
members = [
    "closures",
    "lifetimes",
    "common",
    "ctrl-flow",
    "data-types",
    "enums",
    "error-handling",
    "functions",
    "generics",
    "hash-maps", "lifetimes",
    "options-and-results-enums",
    "ownership",
    "slices",
    "strings",
    "structs",
    "traits",
    "variables",
    "vectors", "closures",
]
